 * @edit sometimes displayed a success message even when it failed. [MG]
 * @cpattr/@mvattr would sometimes copy attribute flags, even when the
   attribute value couldn't be copied. [MG]
 * Bug in attribute comparisons added in p2 could cause attributes to
   not be found at times. [MG]
 * sortby()s results would sometimes be reversed by mistake. [GM]

Version 1.8.4 patchlevel 2                                 Dec 06,  2010

Major Changes:
 * Wildcard matcher completely rewritten to avoid hangs and to provide
   ansi-aware capturing. [GM]
 * connection_fail_limit now lets you limit the # of connection fails in
   a 10 minute time by any given IP. [GM]

Minor Changes:
 * update-cnf.pl perl script now handles optional config lines, by placing
   A # OPTIONAL above them. This is for message translation. [GM]
 * Config options can now be marked as optional. If they don't exist,
   Penn will not complain in the log. [MG]
 * Player names with spaces no longer need to be in given in quotes for
   @name. Suggested by Minion. [MG]
 * @decompile no longer shows flags which can't be set by players, like
   GOING and CONNECTED. [MG]
 * %il substitution as preparation to get rid of ##. [GM]
 * hardcode: call_attrib is now a wrapper around call_ufun. [GM]
 * The %i<n> substitution, and itext()/inum()/ilev() functions, now work
   for @dolist as well as iter(). [MG]
 * iter() context (itext(), inum(), etc) is no longer propagated through
   ufuns. [MG]
 * @hook/overrides on huh_command are now matched against "huh_command" and
   "huh_command <input>". From a suggestion by Mercutio. [MG]
 * Various help fixes.
 * @list and list() can now show only built-in or only local commands or
   functions. Suggested by Trelane@M*U*S*H. [MG]
 * Mortals can now use @search to find any objects they can examine.
   Suggested by Paige. [MG]
 * @function names can start with numbers again. Requested by Mercutio. [MG]
 * @include and @break now work when entered directly from a client. [MG]