@@ -2118,10 +2118,10 @@ See also: words()
   
   Prior to each evaluation, every occurrence of the string "##" in <pattern>
   is replaced with the current word from <list>. However, because this 
-  replacement occurs before substitution, it cannot be used well in nested
+  replacement occurs before evaluation, it cannot be used well in nested
   iter()s, and should not be used on user input or untrusted <list>s, as the
   word will be evaluated. Instead, you can use the %iX substitution, or the 
-  itext() function. The substitution '%il' refers to the outermost iter
+  itext() function. The substitution '%iL' refers to the outermost iter
   of the current expression, and is intended to replace ##.
   
   The string "#@" will be replaced with the position of the current word
