@@ -89,6 +89,7 @@ Fixes:
  * Bug in attribute comparisons added in p2 could cause attributes to
    not be found at times. [MG]
  * sortby()s results would sometimes be reversed by mistake. [GM]
+ * Minor bugfix in @include. [MG]
 
 & 1.8.4p2
 Version 1.8.4 patchlevel 2                                 Dec 06,  2010
